--- a/8b/styles.css
+++ b/8b/styles.css
@@ -42,20 +42,23 @@ header {
 }
 
 .name_holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 25px;
   background-color: #79a153;
   border-color: #79a153;
   border-style: solid;
   color: white;
-  padding-top: 10px;
-  padding-bottom: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 10px;
   text-align: center;
   font-weight: 600;
   font-size: large;
-  height: 30px;
+  height: 50px;
   width: 150px;
 }
 
